--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <embedded.redis.version>1.4.0</embedded.redis.version>
         <caffeine.version>3.1.8</caffeine.version>
         <lombok.version>1.18.30</lombok.version>
+        <java.version>11</java.version>
     </properties>
 
 </project>
